# auto-convert-bot

./: .env  .gitignore  AutoConvertBot_ClassDG.drawio  AutoConvertBot_Tables.drawio  Cargo.toml  README.md  docker-compose.yml
migrations/2020-06-22-190316_run_bot/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
tests/: tests.rs
