[package]
name = "auto-convert-bot"
version = "0.1.0"
authors = ["Barend Wedekind"]
edition = "2018"

[dependencies]
telegram-bot = "0.7.0"
futures = "^0.3.5"
tokio = { version = "0.2", features = ["full"] }
sublime_fuzzy = "0.6.0"
diesel = { version = "1.4.4", features = ["postgres", "uuid"] }
uuid = { version = "0.6.0", features = ["v4"] }
dotenv = "0.15.0"
